--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-asgiref==3.5.0
-backports.zoneinfo==0.2.1
+asgiref==3.4.1
 certifi==2021.10.8
-charset-normalizer==2.0.12
+charset-normalizer==2.0.10
 coreapi==2.3.3
 coreschema==0.0.4
-Django==4.0.3
-django-rest-framework==0.1.0
+Django==3.2.11
+django-channels==0.7.0
 django-richtextfield==1.6.1
 djangorestframework==3.13.1
 drf-yasg==1.20.0
@@ -14,13 +13,20 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
+multidict==6.0.2
+oauthlib==3.1.1
 packaging==21.3
 Pillow==9.0.1
+psycopg2-binary==2.9.3
 pyparsing==3.0.7
+pyTelegramBotAPI==4.4.0
 pytz==2021.3
 requests==2.27.1
+requests-oauthlib==1.3.0
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
+six==1.16.0
 sqlparse==0.4.2
+typing-extensions==4.0.1
 uritemplate==4.1.1
 urllib3==1.26.8
