--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ media/
 .installed.cfg
 *.egg
 *.ini
-
+static/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
