--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.11
 django-channels==0.7.0
 django-richtextfield==1.6.1
 djangorestframework==3.13.1
+django-cors-headers
 drf-yasg==1.20.0
 idna==3.3
 inflection==0.5.1
